mise en place d'une solution opti et script